--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "server": "cd server && npm run dev",
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
+    "build:client": "cd client && npm install && npm run build",
     "start": "cd server && npm start",
-    "install-all": "npm install && cd server && npm install && cd ../client && npm install"
+    "start:server": "cd server && npm start",
+    "install-all": "npm install && cd server && npm install && cd ../client && npm install",
+    "deploy:frontend": "cd client && npm run build",
+    "deploy:backend": "cd server && npm start"
   },
   "keywords": ["polling", "real-time", "socket.io", "react", "express"],
   "author": "",
